fix headings on mobile

--- a/app/assets/stylesheets/badges.scss
+++ b/app/assets/stylesheets/badges.scss
@@ -1,7 +1,7 @@
 @import "variables";
 
 .badge {
-  font-size: .75rem;
+  font-size: 11px;
   font-weight: bold;
   color: $white;
   border-radius: 15px;
